# kitchensink-testing

./: .gitignore  Cargo.toml  LICENSE-MIT  MIGRATION.md  README.md
.history/: README_20260214132542.md  README_20260214134013.md
docs/: integration.md
src/: arithmetic.rs  chaos.rs  collections.rs  financial.rs  lib.rs  numeric.rs  prelude.rs  serialization.rs  stateful.rs  temporal.rs  trading.rs
src/generators/: collections.rs  decimals.rs  edge_values.rs  identifiers.rs  mod.rs  numeric.rs  temporal.rs
src/law/: algebraic.rs  invariants.rs  mod.rs  serialization.rs  stateful.rs
src/law/tokio/: io.rs  loom.rs  mod.rs  sync.rs  task.rs  time.rs
src/mutation/: config.rs  engine.rs  events.rs  mod.rs  report.rs  runner.rs  state.rs
tests/: api_surface.rs  mutation_cli_e2e.rs  pbt_surface.rs  tokio_surface.rs
