[package]
name = "rust-pbt"
version = "0.1.0"
edition = "2024"
authors = ["moofone22@gmail.com"]
license = "MIT OR Apache-2.0"
description = "A comprehensive property-based testing framework for Rust with custom strategies, property templates, and reference implementation oracles"
repository = "https://github.com/moofone/rust-pbt"
documentation = "https://docs.rs/rust-pbt"
readme = "README.md"
keywords = ["testing", "property-based", "proptest", "mutation-testing", "tdd"]
categories = ["development-tools::testing", "development-tools"]

[dependencies]
proptest = "1.5"
arbitrary = { version = "1.4", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
chrono = { version = "0.4", optional = true }

[dev-dependencies]

[features]
default = ["numeric", "collections", "arithmetic", "stateful"]

# Core feature groups
numeric = []
collections = []
arithmetic = []
stateful = []

# Optional domain-specific features
financial = []
serialization = ["serde", "serde_json", "bincode"]
temporal = ["chrono"]

# Trading domain strategies (requires temporal)
trading = ["temporal", "financial"]

# Arbitrary integration
arbitrary = ["dep:arbitrary"]

# Full feature set
full = [
    "numeric",
    "collections",
    "arithmetic",
    "stateful",
    "financial",
    "serialization",
    "temporal",
    "trading",
    "arbitrary"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
