[package]
name = "kitchensink-testing"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["moofone22@gmail.com"]
license = "MIT OR Apache-2.0"
description = "Kitchen-sink testing framework with reusable generators, laws, mutation orchestration, and serialization helpers"
repository = "https://github.com/moofone/rust-pbt"
documentation = "https://docs.rs/kitchensink-testing"
readme = "README.md"
keywords = ["testing", "property-based", "proptest", "mutation-testing", "kitchen-sink", "framework"]
categories = ["development-tools::testing", "development-tools"]

[lib]
name = "rust_pbt"

[[bin]]
name = "cargo-pbt"
path = "src/bin/cargo-pbt.rs"
required-features = ["mutation"]

[[bin]]
name = "cargo-kitchensink"
path = "src/bin/cargo-kitchensink.rs"
required-features = ["mutation"]

[[bin]]
name = "cargo-kitchensink-testing"
path = "src/bin/cargo-kitchensink-testing.rs"
required-features = ["mutation"]

[dependencies]
proptest = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bincode = { version = "1.3", optional = true }
anyhow = { version = "1.0", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
ctrlc = { version = "3.4", optional = true }
tokio = { version = "1.43", features = ["macros", "rt", "sync", "time"], optional = true }
loom = { version = "0.7", optional = true }

[dev-dependencies]
tempfile = "3.14"

[features]
default = ["core", "serialization", "mutation"]
core = []
serialization = ["dep:bincode"]
mutation = ["dep:anyhow", "dep:clap", "dep:ctrlc"]
tokio-laws = ["dep:tokio"]
tokio-loom = ["tokio-laws", "dep:loom"]
full = ["core", "serialization", "mutation", "tokio-laws", "tokio-loom"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
